--- a/transit-routing/requirements.txt
+++ b/transit-routing/requirements.txt
@@ -43,9 +43,11 @@ types-PyYAML>=6.0.12
 SQLAlchemy>=2.0.0
 psycopg2-binary>=2.9.0  # PostgreSQL
 
-# Flask
-Flask>=3.0.0
-Flask-CORS>=4.0.0
+# flask => fast로 변경
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+python-multipart==0.0.6
 
 # swagger-api
 flasgger
