correct nginx conf issue

--- a/nginx/conf.d/kindmap_api.conf
+++ b/nginx/conf.d/kindmap_api.conf
@@ -20,7 +20,7 @@ server {
     
     # API 엔드포인트
     location /api/ {
-        proxy_pass http://fastapi_backend;
+        proxy_pass http://fastapi_backend/; # / 추가해야 /api/를 자르고 프록싱함
         
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
