--- a/nginx/conf.d/kindmap_api.conf
+++ b/nginx/conf.d/kindmap_api.conf
@@ -50,7 +50,7 @@ server{
     }
 
     # login 전용 보호 적용
-    location /api/login {
+    location /api/v1/auth/login {
         # login_limit 적용 -> 분당 5회
         limit_req zone=login_limit burst=5 nodelay;
 
