--- a/nginx/conf.d/kindmap_api.conf
+++ b/nginx/conf.d/kindmap_api.conf
@@ -1,6 +1,12 @@
 # nginx/conf.d/kindmap_api.conf
 upstream fastapi_backend {
-    server fastapi:8001;
+    # ip_hash => sticky session (for websocket)
+    # 동일 IP -> 동일 backend instance (for Websocket Handshake 안정성)
+    ip_hash;
+
+    # Docker Compose의 서비스 이름 사용
+    # replicas=3 설정 시 Docker가 자동으로 로드 밸런싱
+    server fastapi:8001 max_fails=3 fail_timeout=30s;
 }
 
 # HTTP(80) -> HTTPS(443) 강제 redirect
