--- a/nginx/conf.d/kindmap_api.conf
+++ b/nginx/conf.d/kindmap_api.conf
@@ -14,6 +14,12 @@ server{
     listen 80;
     server_name kindmap-for-you.cloud; # 구매한 도메인 입력
 
+    # Docker Healthcheck
+    location /health{
+        access_log off;
+        return 200 "healthy\n";
+    }
+
     location / {
         return 301 https://$host$request_uri;
     }
@@ -98,6 +104,8 @@ server{
         # 웹소켓이 자주 끊기는 것을 방지하기 위해
         # 데이터 전송이 없어도 3600초 동안 연결을 끊지 않음
         # => 현재 ping-pong 세팅이 있지만 방어적으로 세팅
+        # proxy_connect_timeout 제한 추가
+        proxy_connect_timeout 60s;
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
     }
