--- a/nginx/conf.d/kindmap_api.conf
+++ b/nginx/conf.d/kindmap_api.conf
@@ -1,4 +1,6 @@
 # nginx/conf.d/kindmap_api.conf
+
+# upstream fastapi_backend: fastapi_backend 라는 이름의 서버 그룹 정의
 upstream fastapi_backend {
     # ip_hash => sticky session (for websocket)
     # 동일 IP -> 동일 backend instance (for Websocket Handshake 안정성)
@@ -38,6 +40,7 @@ server{
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m; # SSL 핸드쉐이크 캐싱 (성능 향상)
+    # SSL handshake는 CPU 고비용 연산 => 캐싱 적용으로 재연결 속도 향상
     ssl_session_timeout 10m; 
 
     # frontend -> S3 bucket
