--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,41 +7,36 @@ services:
     restart: unless-stopped
     networks:
       - kindmap-network
-    # 보안상 외부 포트 매핑(6379:6379) 제거하고 내부 네트워크에만 노출
     expose:
       - "6379"
     volumes:
       - redis-data:/data
-    # Pub/Sub 사용 => 메모리 더 필요 => 메모리 증가
     command: >
-      redis-server
-      --appendonly yes
-      --maxmemory 512mb
-      --maxmemory-policy allkeys-lru
-      --notify-keyspace-events ""
+      redis-server 
+      --appendonly yes 
+      --maxmemory 512mb 
+      --maxmemory-policy allkeys-lru 
+      --notify-keyspace-events "" 
       --client-output-buffer-limit pubsub 32mb 8mb 60
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 3s
-      retries: 5 # retry 증가
+      retries: 5
       start_period: 5s
 
-  # 백엔드 컨테이너 스케일링
   fastapi:
-    # 빌드된 이미지를 사용 (깃허브 액션이 변수 치환)
     image: ${REPOSITORY_URI}:fastapi-${IMAGE_TAG}
-    # container_name: kindmap-fastapi => scailing을 위해 container_name 제거
+    # container_name 제거 (replicas 사용 시 필수)
     restart: unless-stopped
-    # EC2 내부의 .env 파일 사용
     env_file:
       - /home/ec2-user/.env
     environment:
-      # 배포 환경에 필요한 CORS 오리진 추가 (필요시 도메인 추가)
       ALLOWED_ORIGINS: "http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000,http://35.92.117.143,http://inha-capstone-03-frontend.s3-website-us-west-2.amazonaws.com,https://kindmap-for-you.cloud"
       REDIS_PUBSUB_ENABLED: "true"
       REDIS_PUBSUB_CHANNEL: "kindmap_events"
-    # Nginx를 통해서만 접속하므로 외부 포트 노출을 막고 내부에만 노출
+      # Whisper 모델 저장 경로를 내부 볼륨으로 지정
+      WHISPER_MODEL_DIR: "/root/.cache/huggingface"
     expose:
       - "8001"
     networks:
@@ -49,22 +44,35 @@ services:
     depends_on:
       redis:
         condition: service_healthy
+    
+    # Gunicorn 사용: 프로세스 관리 및 타임아웃 제어에 유리
+    # --timeout 120: 무거운 작업(STT/경로탐색) 중 워커킬 방지 (502 해결)
+    # workers 1: 컨테이너 당 1개의 워커만 띄우고, 컨테이너 개수(replicas)로 스케일링
+    command: >
+      gunicorn app.main:app 
+      --workers 1 
+      --worker-class uvicorn.workers.UvicornWorker 
+      --bind 0.0.0.0:8001 
+      --timeout 120 
+      --keep-alive 120
+      --worker-connections 1000
 
-    # workers <- 1로 다시 변경 for websocket
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8001 --workers 1 --ws-ping-interval 20 --ws-ping-timeout 20
+    # Whisper 모델 캐싱을 위한 볼륨 마운트 => 컨테이너 재시작할 때마다 모델을 다운로드하지 않도록 조정
+    # 컨테이너 재시작 시 모델 다운로드 시간 단축
+    volumes:
+      - /home/ec2-user/model_cache:/root/.cache/huggingface
 
-    # 프로덕션에서는 코드 볼륨 마운트 제거 (이미지 내 코드 사용)
-
-    # 배포 설정으로 3개 인스턴스 실행
     deploy:
       replicas: 3
       resources:
         limits:
           cpus: "1.0"
-          memory: 1G
+          # [상향 조정] Whisper + 경로탐색 그래프 로드 시 1GB는 부족할 수 있음
+          memory: 2G 
         reservations:
           cpus: "0.5"
-          memory: 512M
+          memory: 1G
+    
     healthcheck:
       test:
         [
@@ -74,9 +82,9 @@ services:
           "import urllib.request; urllib.request.urlopen('http://localhost:8001/health').read()",
         ]
       interval: 30s
-      timeout: 3s
+      timeout: 10s # 타임아웃을 조금 더 넉넉하게
       retries: 3
-      start_period: 60s # 초기화 시간 증대
+      start_period: 60s
 
   nginx:
     image: ${REPOSITORY_URI}:nginx-${IMAGE_TAG}
@@ -84,24 +92,15 @@ services:
     restart: unless-stopped
     ports:
       - "80:80"
-      - "443:443" # https 사용을 위한 443 port open
+      - "443:443"
     depends_on:
       - fastapi
     networks:
       - kindmap-network
-    # 호스트의 인증서 폴더 통째로 연결
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--quiet",
-          "--tries=1",
-          "--spider",
-          "http://localhost/health",
-        ]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
       interval: 30s
       timeout: 3s
       retries: 3
