--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ psycopg2-binary>=2.9.0
 
 # FastAPI & Web Framework
 fastapi==0.104.1
+gunicorn
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
