--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,8 +60,7 @@ jobs:
           docker buildx build \
             --platform linux/amd64 \
             --file Dockerfile.fastapi \
-            --cache-from type=registry,ref=$REPOSITORY_URI:fastapi-latest \
-            --cache-to type=inline \
+            --no-cache \
             --tag $REPOSITORY_URI:fastapi-$IMAGE_TAG \
             --tag $REPOSITORY_URI:fastapi-latest \
             --push .
@@ -70,8 +69,7 @@ jobs:
           docker buildx build \
             --platform linux/amd64 \
             --file Dockerfile.nginx \
-            --cache-from type=registry,ref=$REPOSITORY_URI:nginx-latest \
-            --cache-to type=inline \
+            --no-cache \
             --tag $REPOSITORY_URI:nginx-$IMAGE_TAG \
             --tag $REPOSITORY_URI:nginx-latest \
             --push .
