--- a/nginx/conf.d/kindmap_api.conf
+++ b/nginx/conf.d/kindmap_api.conf
@@ -1,25 +1,16 @@
-# nginx/conf.d/kindmap_api.conf
-
-# upstream fastapi_backend: fastapi_backend 라는 이름의 서버 그룹 정의
+# Upstream 서버 그룹 정의
 upstream fastapi_backend {
-    # ip_hash => sticky session (for websocket)
-    # 동일 IP -> 동일 backend instance (for Websocket Handshake 안정성)
-    # ip_hash;
-    # locust 테스트 환경에선 least_conn 사용
     least_conn;
-
-    # Docker Compose의 서비스 이름 사용
-    # replicas=3 설정 시 Docker가 자동으로 로드 밸런싱
     server fastapi:8001 max_fails=3 fail_timeout=30s;
+    keepalive 32;
 }
 
-# HTTP(80) -> HTTPS(443) 강제 redirect
-server{
+server {
     listen 80;
-    server_name kindmap-for-you.cloud; # 구매한 도메인 입력
+    server_name kindmap-for-you.cloud;
+    client_max_body_size 10M;
 
-    # Docker Healthcheck
-    location /health{
+    location /health {
         access_log off;
         return 200 "healthy\n";
     }
@@ -29,23 +20,21 @@ server{
     }
 }
 
-# HTTPS(443) server 설정 (frontend -> S3 , api -> backend)
-server{
+server {
     listen 443 ssl;
     server_name kindmap-for-you.cloud;
 
     ssl_certificate /etc/letsencrypt/live/kindmap-for-you.cloud/fullchain.pem; 
     ssl_certificate_key /etc/letsencrypt/live/kindmap-for-you.cloud/privkey.pem; 
 
-    # SSL 보안 설정 + 속도 최적화
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m; # SSL 핸드쉐이크 캐싱 (성능 향상)
-    # SSL handshake는 CPU 고비용 연산 => 캐싱 적용으로 재연결 속도 향상
+    ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m; 
 
-    # Health check endpoint (로그인 불필요, 모니터링용)
+    client_max_body_size 10M;
+
     location /health {
         access_log off;
         proxy_pass http://fastapi_backend/health;
@@ -53,7 +42,6 @@ server{
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    # Metrics endpoint (로그인 불필요, 모니터링용)
     location /metrics {
         access_log off;
         proxy_pass http://fastapi_backend/v1/metrics;
@@ -61,57 +49,22 @@ server{
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    # frontend -> S3 bucket
-    # proxy 설정
     location / {
-        # S3 도메인을 찾기 위한 DNS 서버 (구글 DNS)
         resolver 8.8.8.8;
-
-        # S3 정적 웹 호스팅 엔드포인트 (http:// 포함)
         set $s3_bucket "http://inha-capstone-03-frontend.s3-website-us-west-2.amazonaws.com";
-
-        # S3로 요청 전달
         proxy_pass $s3_bucket;
-
-        # 호스트 헤더 재설정 (S3가 요청을 인식하도록)
         proxy_set_header Host $proxy_host;
         proxy_set_header X-Real-IP $remote_addr;
-
-        # S3 에러 페이지 처리 (SPA 새로고침 문제 해결용)
         proxy_intercept_errors on;
         error_page 404 = /index.html;
     }
 
-    # login 전용 보호 적용
-    # location /login {
-    #     # login_limit 적용 -> 분당 5회
-    #     # limit_req zone=login_limit burst=5 nodelay; => 부하테스트를 위해 주석 처리
-
-    #     proxy_pass http://fastapi_backend;
-
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
-
-    # api -> backend
     location /api/ {
-        # api_limit 적용 초당 10회
-        # limit_req zone=api_limit burst=20 nodelay; => 부하 테스트를 위해 주석 처리
-
-        # trailing slash 주의!!!
-        # https://fast-api_backend/ => /api/ 경로가 제거되고 전달됨!!!
         proxy_pass http://fastapi_backend/;
         
         proxy_http_version 1.1;
-
-        proxy_set_header Upgrade $http_upgrade; # protocol upgrade 요청 전달
-        
+        proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
-        # connection_upgrade가 하드코딩된 부분 수정 => 동적으로 웹소켓 요청만 upgrade로 자동 변환
-
-        # 웹소켓/API 응답 지연 방지를 위해 버퍼링 off
         proxy_buffering off;
         
         proxy_set_header Host $host;
@@ -119,16 +72,8 @@ server{
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # 웹소켓 연결 유지 시간 1시간
-        # nginx는 기본적으로 일정 시간(default: 60s) 동안 데이터가 오가지 않을 경우
-        # 연결을 끊을 수 있음
-        # 웹소켓이 자주 끊기는 것을 방지하기 위해
-        # 데이터 전송이 없어도 3600초 동안 연결을 끊지 않음
-        # => 현재 ping-pong 세팅이 있지만 방어적으로 세팅
-        # proxy_connect_timeout 제한 추가
-        proxy_connect_timeout 60s;
-        proxy_read_timeout 3600s;
+        proxy_connect_timeout 300s;
         proxy_send_timeout 3600s;
+        proxy_read_timeout 3600s;
     }
-
 }
